syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

message UnlockAvatarTalentReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1072;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 talent_id = 13;
    uint64 avatar_guid = 3;
}

message UnlockAvatarTalentRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1098;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 talent_id = 2;
    int32 retcode = 3;
    uint64 avatar_guid = 10;
}

message AvatarUnlockTalentNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1012;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 entity_id = 14;
    uint64 avatar_guid = 13;
    uint32 talent_id = 10;
    uint32 skill_depot_id = 1;
}

message AvatarSkillDepotChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1035;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 skill_depot_id = 15;
    map<uint32, uint32> proud_skill_extra_level_map = 14;
    repeated uint32 talent_id_list = 9;
    repeated uint32 proud_skill_list = 4;
    uint32 core_proud_skill_level = 2;
    uint32 entity_id = 7;
    uint64 avatar_guid = 12;
    map<uint32, uint32> skill_level_map = 3;
}

message BigTalentPointConvertReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1007;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint64 item_guid_list = 6;
    uint64 avatar_guid = 3;
}

message BigTalentPointConvertRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1021;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    uint64 avatar_guid = 8;
}

message AvatarSkillMaxChargeCountNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1003;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 skill_id = 6;
    uint32 max_charge_count = 11;
    uint64 avatar_guid = 7;
}

message AvatarSkillInfoNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1090;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint32, AvatarSkillInfo> skill_map = 11;
    uint64 guid = 4;
}

message ProudSkillUpgradeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1073;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 5;
    uint32 old_proud_skill_level = 4;
    uint32 proud_skill_id = 14;
}

message ProudSkillUpgradeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1099;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 avatar_guid = 6;
    uint32 proud_skill_id = 10;
    int32 retcode = 15;
}

message ProudSkillChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1031;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 avatar_guid = 11;
    uint32 entity_id = 4;
    uint32 skill_depot_id = 8;
    repeated uint32 proud_skill_list = 12;
}

message AvatarSkillUpgradeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1075;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 7;
    uint32 old_level = 3;
    uint32 avatar_skill_id = 4;
}

message AvatarSkillUpgradeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1048;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 avatar_guid = 11;
    uint32 cur_level = 14;
    uint32 avatar_skill_id = 9;
    uint32 old_level = 3;
    int32 retcode = 4;
}

message AvatarSkillChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1097;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 cur_level = 11;
    uint64 avatar_guid = 2;
    uint32 entity_id = 7;
    uint32 skill_depot_id = 13;
    uint32 old_level = 1;
    uint32 avatar_skill_id = 6;
}

message ProudSkillExtraLevelNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1081;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 talent_type = 11;
    uint32 talent_index = 8;
    uint64 avatar_guid = 15;
    uint32 extra_level = 3;
}

message CanUseSkillNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1005;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    bool is_can_use_skill = 2;
}

message AvatarTeamResonanceInfo {
    repeated uint32 add_team_resonance_id_list = 5;
    uint32 entity_id = 11;
    uint64 avatar_guid = 3;
    repeated uint32 del_team_resonance_id_list = 14;
}

message TeamResonanceChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1082;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated AvatarTeamResonanceInfo info_list = 1;
}
